--- a/docs/Element/1D.md
+++ b/docs/Element/1D.md
@@ -11,7 +11,7 @@ There are three methods available to create 1D elements:
 
 * Start and End location (`SE`method) :  eg. `Truss.SE` , `Beam.SE`  
     Creates multiple equally spaced elements between a given start and end location.
-http://localhost:8000/Element/1D/
+
 * Start, Direction and Length (`SDL` method) :  eg. `Truss.SDL` , `Beam.SDL`  
     It creates equally divided elements at Start location along the the direction with given total length.
 
@@ -29,6 +29,7 @@ A nested class within Element used to create truss elements.
 `SECT`: Section ID of the truss element  
 `NODE`: Nodes of element in list. eg: [1,2]   
 `ANGLE`: Beta angle of the truss element  
+`LENGTH` : Length of the truss element   
 
 
 To create truss element we have total 3 methods :  
@@ -114,12 +115,13 @@ A nested class within Element used to create Beam elements.
 `SECT`: Section ID of the beam element  
 `NODE`: Nodes of element in list. eg: [1,2]   
 `ANGLE`: Beta angle of the beam element  
+`LENGTH` : Length of the beam element
 
 
 To create Beam element we have total 3 methods :  
 
 ### 1. Beam
-**<font color="green">`Element.Beam(i:int, j:int, mat = 1, sect = 1, angle = 0, group = '' , id = 0)`</font>**  
+**<font color="green">`Element.Beam(i:int, j:int, mat = 1, sect = 1, angle = 0, group = '' , id = 0 , bLocalAxis=False)`</font>**  
 Creates a Beam between nodes `i` and `j`.
 
 #### Parameters
@@ -130,6 +132,7 @@ Creates a Beam between nodes `i` and `j`.
 * `angle (default=0)`: Beta angle of the Beam element
 * `group (default='')`: Structure group of the element and its nodes(can be str or list eg. 'SG' or ['SG1','SG2'])
 * `id (default=0)`: Manually assign an ID.   If **0**, ID will be auto-assigned.
+* `bLocalAxis (default=False)` : Assign the local axis data to nodes
 
 #### Examples
 ```py
@@ -144,14 +147,14 @@ Element.create()
 
 
 ### 2. Beam.SE
-**<font color="green">`Element.Beam.SE(s_loc: list, e_loc: list, n: int = 1, mat, sect, angle, group, id)`</font>**  
+**<font color="green">`Element.Beam.SE(s_loc: list, e_loc: list, n: int = 1, mat, sect, angle, group, id, bLocalAxis)`</font>**  
 Creates `n` Beam elements between start and end location.
 
 #### Parameters
 * `s_loc`: Start location. [x,y,z]
 * `e_loc`: End location. [x,y,z]
 * `n (default=1)`: Number of elements
-* `mat,sect,angle,group,id` : Same as Element.Beam() method
+* `mat,sect,angle,group,id,bLocalAxis` : Same as Element.Beam() method
 
 #### Examples
 ```py
@@ -162,7 +165,7 @@ Element.create()
 ```
 
 ### 3. Beam.SDL
-**<font color="green">`Element.Beam.SDL(s_loc: list, dir: list, l: float, n: int = 1, mat, sect, angle, group, id)`</font>**  
+**<font color="green">`Element.Beam.SDL(s_loc: list, dir: list, l: float, n: int = 1, mat, sect, angle, group, id, bLocalAxis)`</font>**  
 Creates `n` Beam elements along a straight line defined by direction `dir` and length `l` starting at `s_loc`.
 
 #### Parameters
@@ -170,7 +173,7 @@ Creates `n` Beam elements along a straight line defined by direction `dir` and l
 * `dir`: Direction vector [dx, dy, dz]
 * `l`: Total length of element
 * `n (default=1)`: Number of elements
-* `mat,sect,angle,group,id` : Same as Element.Beam() method
+* `mat,sect,angle,group,id,bLocalAxis` : Same as Element.Beam() method
 
 #### Examples
 ```py
@@ -181,9 +184,11 @@ Element.create()
 ```
 
 ### 4. Beam.PLine
-**<font color="green">`Element.Beam.PLine(points_loc: list, n_div:int=0,deg:int=1,includePoint:bool=True, mat, sect, angle, group, id)`</font>**  
+**<font color="green">`Element.Beam.PLine(points_loc: list, n_div:int=0,deg:int=1,includePoint:bool=True, mat, sect, angle, group, id, bLocalAxis=False,div_axis="L")`</font>**  
 Creates equal `n_div` Beam elements passing through curve defined by `points_loc`.   
 It allows dividing a curve into equal-length segments while providing an option to include the original input points (even if they don’t coincide with the division points).
+
+![NODE GRID](beam_Pline.png)
 
 #### Parameters
 * `points_loc`: List of control points defining the curve. [[x1, y1, z1],[x2, y2, z2],...]
@@ -197,7 +202,13 @@ It allows dividing a curve into equal-length segments while providing an option 
 &emsp;&emsp;&emsp;&emsp;
 • True: Original points always appear in the mesh. <font color="orange">&nbsp;&nbsp;|&nbsp;&nbsp;</font> 
 • False: Only equal subdivisions are used.
-* `mat,sect,angle,group,id` : Same as Element.Beam() method
+* `mat,sect,angle,group,id,bLocalAxis` : Same as Element.Beam() method
+* `div_axis`: Method of division   
+&emsp;&emsp;&emsp;&emsp;
+1 : "L" - Equal length <font color="orange">&nbsp;&nbsp;|&nbsp;&nbsp;</font> 
+2 : "X" - Equal division along X  <font color="orange">&nbsp;&nbsp;|&nbsp;&nbsp;</font> 
+2 : "Y" - Equal division along Y  <font color="orange">&nbsp;&nbsp;|&nbsp;&nbsp;</font> 
+3 : "Z" - Equal division along Z
 
 
 #### Examples  
@@ -210,6 +221,56 @@ Node.create()
 Element.create()
 ```  
 
+### 5. Beam.PLine2
+**<font color="green">`Element.Beam.PLine(points_loc: list, n_div:int=0,deg:int=1,includePoint:bool=True, mat, sect, angle, group, id, bLocalAxis=False,div_axis="L",yEcc:list[float]=0,zEcc:list[float]=0,bAngleInEcc:bool=True)`</font>**  
+Creates equal `n_div` Beam elements passing through curve defined by `points_loc`.   
+It allows dividing a curve into equal-length segments while providing an option to include the original input points (even if they don’t coincide with the division points).
+
+Additional options are provided to offset the curve in local-y and local-z direction.  
+
+`Angle , yEcc , zEcc` can take float or list(float)  
+Eg. yEcc = [0,10,0] -> Offset at start = 0 <font color="orange">&nbsp;&nbsp;|&nbsp;&nbsp;</font>   Offset at mid = 10  <font color="orange">&nbsp;&nbsp;|&nbsp;&nbsp;</font>   Offset at end = 0    
+Inbetween values are interpolated based on **MAKIMA 1D** interpolation. 
+
+![NODE GRID](beam_Pline2.png)
+
+#### Parameters
+* `points_loc`: List of control points defining the curve. [[x1, y1, z1],[x2, y2, z2],...]
+* `n_div`: No. of beam elements to be generated. If `n_div` = 0 , no interpolation will be considered. 
+* `deg`: Degree of interpolation curve.   
+&emsp;&emsp;&emsp;&emsp;
+1 : Linear <font color="orange">&nbsp;&nbsp;|&nbsp;&nbsp;</font> 
+2 : Quadratic  <font color="orange">&nbsp;&nbsp;|&nbsp;&nbsp;</font> 
+3 : Cubic
+* `includePoint`: Whether to include original input points in the final curve.   
+&emsp;&emsp;&emsp;&emsp;
+• True: Original points always appear in the mesh. <font color="orange">&nbsp;&nbsp;|&nbsp;&nbsp;</font> 
+• False: Only equal subdivisions are used.
+* `mat,sect,angle,group,id,bLocalAxis,div_axis` : Same as Element.Beam() method
+* `yEcc` : Offset along Local-Y direction
+* `zEcc` : Offset along Local-Z direction
+* `bAngleInEcc` (boolean): Whether to consider beta angle for the offset calculation
+
+
+#### Examples  
+
+![NODE GRID](beam_Pline2_offset.png)
+
+```py
+ptA = [[0,0,0],[5,0,0],[10,0,0]]
+ptB = [[0,5,0],[5,5,0],[10,5,0]]
+
+Element.Beam.PLine2(ptA,100,2,False,angle=[0,90],yEcc=0,bAngleInEcc=False)
+Element.Beam.PLine2(ptA,100,2,False,angle=[0,90],yEcc=2,bAngleInEcc=False)
+
+Element.Beam.PLine2(ptB,100,2,False,angle=[0,90],yEcc=0,bAngleInEcc=True)
+Element.Beam.PLine2(ptB,100,2,False,angle=[0,90],yEcc=2,bAngleInEcc=True)
+
+Node.create()
+Element.create()
+```  
+
+
 ----------------------------------------------------------------------------------------------------
 
 ## TENSION
@@ -220,14 +281,15 @@ A nested class within Element used to create tension-only elements, hooks, and c
 
 `ID`: Element ID  
 `TYPE`: Element type = <font color="red">'COMPTR'</font>  
-`MATL`: Material ID of the compression element  
-`SECT`: Section ID of the compression element  
+`MATL`: Material ID of the tension element  
+`SECT`: Section ID of the tension element  
 `NODE`: Nodes of element in list. eg: [1,2]   
-`ANGLE`: Beta angle of the compression element  
-`STYPE`: Subtype of compression element (1=Compression-only, 2=Gap)  
-`TENS`: Allowable tension or initial compression force  
-`T_LIMIT`: Compression limit value  
-`T_bLMT`: Compression limit flag (automatically set when T_LIMIT is provided)  
+`ANGLE`: Beta angle of the tension element  
+`LENGTH` : Length of the tension element   
+`STYPE`: Subtype of tension element (1=Tension-only, 2=Hook, 3=Cable)  
+`TENS`: Allowable compression or initial tension force  
+`T_LIMIT`: Tension limit value  
+`T_bLMT`: Tension limit flag (automatically set when T_LIMIT is provided)  
 `NON_LEN`: Non-linear length parameter (for Gap subtype)  
 
 ### Tension Element
@@ -302,7 +364,8 @@ A nested class within Element used to create compression-only elements and gaps.
 `MATL`: Material ID of the compression element  
 `SECT`: Section ID of the compression element  
 `NODE`: Nodes of element in list. eg: [1,2]   
-`ANGLE`: Beta angle of the compression element  
+`ANGLE`: Beta angle of the compression element 
+`LENGTH` : Length of the compression element   
 `STYPE`: Subtype of compression element (1=Compression-only, 2=Gap)  
 `TENS`: Allowable tension or initial compression force  
 `T_LIMIT`: Compression limit value  
