--- a/docs/Element/2D.md
+++ b/docs/Element/2D.md
@@ -11,17 +11,21 @@ A nested class within Element used to create Plate elements.
 
 `ID`: Element ID  
 `TYPE`: Element type = <font color="red">'PLATE'</font>  
-`MATL`: Material ID of the beam element  
-`SECT`: Section ID of the beam element  
+`MATL`: Material ID of the plate element  
+`SECT`: Section ID of the plate element  
 `NODE`: Nodes of element in list. eg: [1,2,3,4]   
-`ANGLE`: Beta angle of the beam element  
+`ANGLE`: Beta angle of the plate element  
+`AREA` : Area of Plate element  
+`NORMAL` : Normal vector of the Plate element   
 `STYPE`: Type of Plate element   
 &emsp;&emsp;&emsp;&emsp;1 : Thick <font color="orange">&nbsp;&nbsp;|&nbsp;&nbsp;</font> 
 2 : Thin  <font color="orange">&nbsp;&nbsp;|&nbsp;&nbsp;</font> 
 3 : Thick w Drilling dof  <font color="orange">&nbsp;&nbsp;|&nbsp;&nbsp;</font> 
-4 : Thin w Drilling dof 
+4 : Thin w Drilling dof  
 
-### Constructor
+To create Plate element we have total 2 methods :  
+
+### 1. Plate
 **<font color="green">`Element.Plate(nodes:list, stype:int=1, mat = 1, sect = 1, angle = 0, group = '' , id = 0)`</font>**  
 Creates a Plate element.
 
@@ -52,6 +56,39 @@ Element.create()
 ```
 
 
+### 2. Plate.loftGroups
+**<font color="green">`Element.Plate.loftGroups(strGroups:list, stype:int=1, mat = 1, sect = 1, angle = 0, group = '' , id = 0)`</font>**  
+Creates Plate elements connecting the nodes in Structure groups.
+
+![MIDAS PYTHON](plate_loftGroups.png)
+
+
+#### Parameters
+* `loftGroups`: List of Structure groups whose nodes are to be used(eg. ['SG1','SG2','SG3']) .   
+&emsp;&emsp;&emsp;&emsp; Min. 2 groups with 2 nodes are nodes are required.
+* `stype (default=3)`: Sub Type of Plate element   
+&emsp;&emsp;&emsp;&emsp;
+1 : Thick <font color="orange">&nbsp;&nbsp;|&nbsp;&nbsp;</font> 
+2 : Thin  <font color="orange">&nbsp;&nbsp;|&nbsp;&nbsp;</font> 
+3 : Thick w Drilling dof  <font color="orange">&nbsp;&nbsp;|&nbsp;&nbsp;</font> 
+4 : Thin w Drilling dof  
+* `mat (default=1)`: Material ID of the Plate element  
+* `sect (default=1)`: Thickness ID of the Plate element  
+* `angle (default=0)`: Beta angle of the Plate element  
+* `group (default='')`: Structure group of the element and its nodes(can be str or list eg. 'SG' or ['SG1','SG2'])
+* `id (default=0)`: Manually assign an ID.   If **0**, ID will be auto-assigned.  
+
+#### Examples
+```py
+Element.Beam.SDL([0,0,0],[1,0,0],10,10,group='SG1')
+Element.Beam.SDL([0,1,0],[1,0,0],10,10,group='SG2')
+Element.Beam.SDL([0,3,0],[1,0,0],10,10,group='SG3')
+
+Element.Plate.loftGroups(['SG1','SG2','SG3'])
+
+Node.create()
+Element.create()
+```
 
 
 ## Examples
