--- a/docs/Element/.02_element.md
+++ b/docs/Element/.02_element.md
@@ -134,7 +134,7 @@ To create truss element we have total 3 methods :
 
 
 ### 1. Truss
-**<font color="green">`Element.Truss(i:int, j:int, mat = 1, sect = 1, angle = 0, id = 0)`</font>**  
+**<font color="green">`Element.Truss(i:int, j:int, mat = 1, sect = 1, angle = 0, id=None)`</font>**  
 Creates a truss between nodes `i` and `j`.
 
 #### Parameters
@@ -143,7 +143,7 @@ Creates a truss between nodes `i` and `j`.
 * `mat (default=1`: Material ID of the truss element
 * `sect (default=1)`: Section ID of the truss element
 * `angle (default=0)`: Beta angle of the truss element
-* `id (default=0)`: Manually assign an ID.   If **0**, ID will be auto-assigned.
+* `id (default=None)`: Manually assign an ID.   If **0**, ID will be auto-assigned.
 
 #### Examples
 ```py
@@ -218,7 +218,7 @@ A nested class within Element used to create Beam elements.
 To create Beam element we have total 3 methods :  
 
 ### 1. Beam
-**<font color="green">`Element.Beam(i:int, j:int, mat = 1, sect = 1, angle = 0, id = 0)`</font>**  
+**<font color="green">`Element.Beam(i:int, j:int, mat = 1, sect = 1, angle = 0, id=None)`</font>**  
 Creates a Beam between nodes `i` and `j`.
 
 #### Parameters
@@ -227,7 +227,7 @@ Creates a Beam between nodes `i` and `j`.
 * `mat (default=1`: Material ID of the Beam element
 * `sect (default=1)`: Section ID of the Beam element
 * `angle (default=0)`: Beta angle of the Beam element
-* `id (default=0)`: Manually assign an ID.   If **0**, ID will be auto-assigned.
+* `id (default=None)`: Manually assign an ID.   If **0**, ID will be auto-assigned.
 
 
 #### Examples
@@ -305,7 +305,7 @@ A nested class within Element used to create Plate elements.
 4 : Thin w Drilling dof 
 
 ### Constructor
-**<font color="green">`Element.Plate(nodes:list, stype:int=1, mat = 1, sect = 1, angle = 0, id = 0)`</font>**  
+**<font color="green">`Element.Plate(nodes:list, stype:int=1, mat = 1, sect = 1, angle = 0, id=None)`</font>**  
 Creates a Plate element.
 
 #### Parameters
@@ -318,7 +318,7 @@ Creates a Plate element.
 * `mat (default=1)`: Material ID of the Plate element  
 * `sect (default=1)`: Thickness ID of the Plate element  
 * `angle (default=0)`: Beta angle of the Plate element  
-* `id (default=0)`: Manually assign an ID.   If **0**, ID will be auto-assigned.  
+* `id (default=None)`: Manually assign an ID.   If **0**, ID will be auto-assigned.  
 
 #### Examples
 ```py
