--- a/docs/Element/1D.md
+++ b/docs/Element/1D.md
@@ -35,7 +35,7 @@ A nested class within Element used to create truss elements.
 To create truss element we have total 3 methods :  
 
 ### 1. Truss
-**<font color="green">`Element.Truss(i:int, j:int, mat = 1, sect = 1, angle = 0, group = '' , id = 0)`</font>**  
+**<font color="green">`Element.Truss(i:int, j:int, mat = 1, sect = 1, angle = 0, group = '' , id=None)`</font>**  
 Creates a truss between nodes `i` and `j`.
 
 #### Parameters
@@ -45,7 +45,7 @@ Creates a truss between nodes `i` and `j`.
 * `sect (default=1)`: Section ID of the truss element
 * `angle (default=0)`: Beta angle of the truss element
 * `group (default='')`: Structure group of the element and its nodes (can be str or list eg. 'SG' or ['SG1','SG2'])
-* `id (default=0)`: Manually assign an ID.   If **0**, ID will be auto-assigned.
+* `id (default=None)`: Manually assign an ID.   If **0**, ID will be auto-assigned.
 
 #### Examples
 ```py
@@ -121,7 +121,7 @@ A nested class within Element used to create Beam elements.
 To create Beam element we have total 3 methods :  
 
 ### 1. Beam
-**<font color="green">`Element.Beam(i:int, j:int, mat = 1, sect = 1, angle = 0, group = '' , id = 0 , bLocalAxis=False)`</font>**  
+**<font color="green">`Element.Beam(i:int, j:int, mat = 1, sect = 1, angle = 0, group = '' , id=None , bLocalAxis=False)`</font>**  
 Creates a Beam between nodes `i` and `j`.
 
 #### Parameters
@@ -131,7 +131,7 @@ Creates a Beam between nodes `i` and `j`.
 * `sect (default=1)`: Section ID of the Beam element
 * `angle (default=0)`: Beta angle of the Beam element
 * `group (default='')`: Structure group of the element and its nodes(can be str or list eg. 'SG' or ['SG1','SG2'])
-* `id (default=0)`: Manually assign an ID.   If **0**, ID will be auto-assigned.
+* `id (default=None)`: Manually assign an ID.   If **0**, ID will be auto-assigned.
 * `bLocalAxis (default=False)` : Assign the local axis data to nodes
 
 #### Examples
@@ -293,7 +293,7 @@ A nested class within Element used to create tension-only elements, hooks, and c
 `NON_LEN`: Non-linear length parameter (for Gap subtype)  
 
 ### Tension Element
-**<font color="green">`Element.Tension(i:int, j:int, stype:int, mat = 1, sect = 1, angle = 0, group = '' , id = 0, non_len = None, cable_type = None, tens = None, t_limit = None)`</font>**  
+**<font color="green">`Element.Tension(i:int, j:int, stype:int, mat = 1, sect = 1, angle = 0, group = '' , id=None, non_len = None, cable_type = None, tens = None, t_limit = None)`</font>**  
 Creates a tension element between nodes `i` and `j`.
 
 #### Parameters
@@ -304,7 +304,7 @@ Creates a tension element between nodes `i` and `j`.
 * `sect (default=1)`: Section ID of the tension element
 * `angle (default=0)`: Beta angle of the tension element
 * `group (default='')`: Structure group of the element and its nodes (can be str or list eg. 'SG' or ['SG1','SG2'])
-* `id (default=0)`: Manually assign an ID. If **0**, ID will be auto-assigned.
+* `id (default=None)`: Manually assign an ID. If **0**, ID will be auto-assigned.
 * `non_len (default=None)`: Non-linear length parameter for Hook/Cable
 * `cable_type (default=None)`: Cable type for stype=3 (1=Pretension, 2=Horizontal, 3=Lu)
 * `tens (default=None)`: Initial tension force or allowable compression
@@ -373,7 +373,7 @@ A nested class within Element used to create compression-only elements and gaps.
 `NON_LEN`: Non-linear length parameter (for Gap subtype)  
 
 ### Compression Element
-**<font color="green">`Element.Compression(i:int, j:int, stype:int, mat = 1, sect = 1, angle = 0, group = '' , id = 0, tens = None, t_limit = None, non_len = None)`</font>**  
+**<font color="green">`Element.Compression(i:int, j:int, stype:int, mat = 1, sect = 1, angle = 0, group = '' , id=None, tens = None, t_limit = None, non_len = None)`</font>**  
 Creates a compression element between nodes `i` and `j`.
 
 #### Parameters
@@ -384,7 +384,7 @@ Creates a compression element between nodes `i` and `j`.
 * `sect (default=1)`: Section ID of the compression element
 * `angle (default=0)`: Beta angle of the compression element
 * `group (default='')`: Structure group of the element and its nodes (can be str or list eg. 'SG' or ['SG1','SG2'])
-* `id (default=0)`: Manually assign an ID. If **0**, ID will be auto-assigned.
+* `id (default=None)`: Manually assign an ID. If **0**, ID will be auto-assigned.
 * `tens (default=None)`: Allowable tension or initial compression force
 * `t_limit (default=None)`: Compression limit value
 * `non_len (default=None)`: Non-linear length parameter for gap
