--- a/docs/Element/2D.md
+++ b/docs/Element/2D.md
@@ -26,7 +26,7 @@ A nested class within Element used to create Plate elements.
 To create Plate element we have total 2 methods :  
 
 ### 1. Plate
-**<font color="green">`Element.Plate(nodes:list, stype:int=1, mat = 1, sect = 1, angle = 0, group = '' , id = 0)`</font>**  
+**<font color="green">`Element.Plate(nodes:list, stype:int=1, mat = 1, sect = 1, angle = 0, group = '' , id=None)`</font>**  
 Creates a Plate element.
 
 #### Parameters
@@ -41,7 +41,7 @@ Creates a Plate element.
 * `sect (default=1)`: Thickness ID of the Plate element  
 * `angle (default=0)`: Beta angle of the Plate element  
 * `group (default='')`: Structure group of the element and its nodes(can be str or list eg. 'SG' or ['SG1','SG2'])
-* `id (default=0)`: Manually assign an ID.   If **0**, ID will be auto-assigned.  
+* `id (default=None)`: Manually assign an ID.   If **0**, ID will be auto-assigned.  
 
 #### Examples
 ```py
@@ -57,7 +57,7 @@ Element.create()
 
 
 ### 2. Plate.loftGroups
-**<font color="green">`Element.Plate.loftGroups(strGroups:list, stype:int=1, mat = 1, sect = 1, angle = 0, group = '' , id = 0)`</font>**  
+**<font color="green">`Element.Plate.loftGroups(strGroups:list, stype:int=1, mat = 1, sect = 1, angle = 0, group = '' , id=None)`</font>**  
 Creates Plate elements connecting the nodes in Structure groups.
 
 ![MIDAS PYTHON](plate_loftGroups.png)
@@ -76,7 +76,7 @@ Creates Plate elements connecting the nodes in Structure groups.
 * `sect (default=1)`: Thickness ID of the Plate element  
 * `angle (default=0)`: Beta angle of the Plate element  
 * `group (default='')`: Structure group of the element and its nodes(can be str or list eg. 'SG' or ['SG1','SG2'])
-* `id (default=0)`: Manually assign an ID.   If **0**, ID will be auto-assigned.  
+* `id (default=None)`: Manually assign an ID.   If **0**, ID will be auto-assigned.  
 
 #### Examples
 ```py
