--- a/docs/Element/3D.md
+++ b/docs/Element/3D.md
@@ -17,7 +17,7 @@ A nested class within Element used to create Solid elements.
 `STYPE`: Type of Solid element  
 
 ### Constructor
-**<font color="green">`Element.Solid(nodes:list, mat = 1, sect = 0, group = '' , id = 0)`</font>**  
+**<font color="green">`Element.Solid(nodes:list, mat = 1, sect = 0, group = '' , id=None)`</font>**  
 Creates a Solid element.
 
 #### Parameters
@@ -28,7 +28,7 @@ Creates a Solid element.
 * `mat (default=1)`: Material ID of the Solid element  
 * `sect (default=0)`: Section ID of the Solid element  
 * `group (default='')`: Structure group of the element and its nodes (can be str or list eg. 'SG' or ['SG1','SG2'])
-* `id (default=0)`: Manually assign an ID. If **0**, ID will be auto-assigned.  
+* `id (default=None)`: Manually assign an ID. If **0**, ID will be auto-assigned.  
 
 #### Node Ordering
 ![MIDAS PYTHON](elm_3d_nodeOrder.png)
