--- a/docs/Element/.02_element.md
+++ b/docs/Element/.02_element.md
@@ -90,6 +90,13 @@ for elem in Element.elements:
 ```
 
 
+### <font style="font-size:0px">Element.</font>clear
+Deletes all element data from both Python.
+
+```py
+Element.clear()
+```
+
 ### <font style="font-size:0px">Element.</font>delete
 Deletes all element data from both Python and Civil NX.
 
