--- a/docs/Element/2D.md
+++ b/docs/Element/2D.md
@@ -16,7 +16,8 @@ A nested class within Element used to create Plate elements.
 `NODE`: Nodes of element in list. eg: [1,2,3,4]   
 `ANGLE`: Beta angle of the plate element  
 `AREA` : Area of Plate element  
-`NORMAL` : Normal vector of the Plate element   
+`NORMAL` : Normal vector of the Plate element   eg: (0,0,1)
+`CENTER` : Centroid location of the Plate element   (x,y,z)
 `STYPE`: Type of Plate element   
 &emsp;&emsp;&emsp;&emsp;1 : Thick <font color="orange">&nbsp;&nbsp;|&nbsp;&nbsp;</font> 
 2 : Thin  <font color="orange">&nbsp;&nbsp;|&nbsp;&nbsp;</font> 
